fix: remove FluentDataGridRow z-index property

--- a/src/Core/Components/DataGrid/FluentDataGridRow.razor.css
+++ b/src/Core/Components/DataGrid/FluentDataGridRow.razor.css
@@ -1,8 +1,6 @@
 ﻿.header {
     padding: 0;
-    z-index: 3;
 }
 
 .sticky-header {
-    z-index: 3;
 }
